--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,3 +52,27 @@ jobs:
       working-directory: ${{github.workspace}}/build
       shell: bash
       run: cmake --build . --config $BUILD_TYPE
+
+  build-docker:
+    name: Build Maiko Docker container
+    description: Build the Maiko Docker container
+    runs:
+      using: 'docker'
+      image: 'Dockerfile'
+
+  push-to-registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags:interlisp/maiko:latest
