--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
       image: 'Dockerfile'
 
   push-to-registry:
-    name: Push Docker image to Docker Hub
+    name: 'Push Docker image to Docker Hub'
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
