--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,9 @@ jobs:
     runs:
       using: 'docker'
       image: 'Dockerfile'
+    steps:
+      - name: Build it
+        run: docker Dockerfile
 
   push-to-registry:
     name: 'Push Docker image to Docker Hub'
