--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,13 +56,26 @@ jobs:
   build-docker:
     name: Build Maiko Docker container
     runs-on: ubuntu-latest
+    env:
+      BUILD_TYPE: Release
     steps:
       - uses: actions/checkout@v2
+      - name: Create Build Environment
+        run: cmake -E make_directory ${{github.workspace}}/build
+      - name: Configure CMake
+        shell: bash
+        working-directory: ${{github.workspace}}/build
+        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      - name: Build
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        run: cmake --build . --config $BUILD_TYPE
       - name: Build Docker image
         run: docker build .
 
   push-to-registry:
     name: 'Push Docker image to Docker Hub'
+    if: ${{ false }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
