--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,10 @@ jobs:
         working-directory: ${{github.workspace}}/build
         shell: bash
         run: cmake --build . --config $BUILD_TYPE
+      - name: Check the workspace
+        working-directory: ${{github.workspace}}
+        shell: bash
+        run: pwd; ls -l
       - name: Check the build dir
         working-directory: ${{github.workspace}}/build
         shell: bash
