--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Find it
         working-directory: ${{github.workspace}}/build
         shell: bash
-        run: pwd; ls -l; find . -name ldex -ls
+        run: pwd; ls -l; find . -name ldex -exec ls -l {} \;
       - name: Build Docker image
         run: docker build --build-arg exes="${{github.workspace}}/build" .
 
