--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,23 +75,15 @@ jobs:
         shell: bash
         run: pwd; ls -l
       - name: Find it, copy ir
-        working-directory: ${{github.workspace}}/build
+        working-directory: ${{github.workspace}}/build2
         shell: bash
         run: cp lde* mkvdate setsout tstsout ../docker/
       - name: Build Docker image
         working-directory: ${{github.workspace}}/docker
         run: docker build .
-
-  push-to-registry:
-    name: 'Push Docker image to Docker Hub'
-    if: ${{ false }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
-        with:
+	with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
@@ -99,3 +91,4 @@ jobs:
         with:
           push: true
           tags: interlisp/maiko:latest
+
