--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,8 @@ jobs:
       - name: Build Docker image
         working-directory: ${{github.workspace}}/docker
         run: docker build .
-      - name: Log in to Docker Hub
+      - 
+        name: Log in to Docker Hub
         uses: docker/login-action@v1
 	with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -92,4 +93,3 @@ jobs:
           push: true
           tags: interlisp/maiko:latest
 
-# Force a change
