--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,10 +81,9 @@ jobs:
       - name: Build Docker image
         working-directory: ${{github.workspace}}/docker
         run: docker build .
-      - 
-        name: Log in to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v1
-	with:
+        with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push to Docker Hub
@@ -92,4 +91,3 @@ jobs:
         with:
           push: true
           tags: interlisp/maiko:latest
-
